--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <include src="./partials/head.html" title="{{1 + 1}}"></include>
+  <include src="./partials/head.html" title='{{1 + " cool"}}'></include>
   <body>
-    <p>hello world</p>
+    <p>hello</p>
   </body>
 </html>
