feat: added support for mustache eval & props

--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <include src="./partials/head.html" title='{{1 + " cool"}}'></include>
+  <include src="./partials/head.html" title='{{"cool"}}' />
   <body>
+    <include src="./partials/navbar.html" />
     <p>hello</p>
+    <include src="./upper.html" myProp='{{"nice"}}' />
   </body>
 </html>
