feat: added watcher

--- a/example/pages/team.html
+++ b/example/pages/team.html
@@ -4,6 +4,6 @@
   <body>
     <include src="../partials/navbar.html" />
 
-    <h2>This is Team page</h2>
+    <h2>This is cool page</h2>
   </body>
 </html>
