--- a/example/pages/nested/about.html
+++ b/example/pages/nested/about.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <include src="../../partials/head.html" title="Team page" />
-  <body>
-    <include src="../../partials/navbar.html" />
-
-    <h2>This is about page</h2>
-  </body>
-</html>
+<include src="../partials/layout.html">
+  <h2>This is about page</h2>
+</include>
