--- a/example/pages/team.html
+++ b/example/pages/team.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <include src="../partials/head.html" title="Team page" />
-  <body>
-    <include src="../partials/navbar.html" />
-
-    <h2>This is cool page</h2>
-  </body>
-</html>
+<include src="../partials/layout.html">
+  <h2>This is cool page</h2>
+  <h2>This is cool {{1 + 1}}</h2>
+</include>
