fix: improve path resolve by only resolving absolute paths

--- a/example/cards.html
+++ b/example/cards.html
@@ -3,7 +3,7 @@
 <div class="row">
   {{ map(props.myProp, v => `
   <include
-    src="./partials/card.html"
+    src="partials/card.html"
     title="${v}"
     desc="nice"
     linkHref="#"
