--- a/example/pages/team.html
+++ b/example/pages/team.html
@@ -1,4 +1,4 @@
-<include src="../partials/layout.html">
+<include src="partials/layout.html">
   <h2>This is cool page</h2>
   <h2>This is cool {{1 + 1}}</h2>
 </include>
