--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,5 @@
-<include src="./partials/layout.html">
+<include src="partials/layout.html">
   <h2>Home Page</h2>
 
-  <include src="./cards.html" myProp="{{['hello', 'world']}}">
-    {{1+1}}
-  </include>
+  <include src="cards.html" myProp="{{['hello', 'world']}}"> {{1+1}} </include>
 </include>
