--- a/example/pages/nested/about.html
+++ b/example/pages/nested/about.html
@@ -1,3 +1,4 @@
-<include src="../partials/layout.html">
+<include src="partials/layout.html">
   <h2>This is about page</h2>
+  <include src="cards.html" myProp="{{['one', 'two', 'three']}}" />
 </include>
