feat: added support for default slot content

--- a/example/cards.html
+++ b/example/cards.html
@@ -9,7 +9,7 @@
     linkHref="#"
     linkText="text-${v}"
   >
-    <span>${v} + <slot></slot></span>
+    <slot></slot>
   </include>
   `) }}
 </div>
