--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,17 @@
 <include src="partials/layout.html">
   <h2>Home Page</h2>
 
-  <include src="cards.html" myProp="{{['hello', 'world']}}"> {{1+1}} </include>
+  <include 
+    src="cards.html" 
+    myProp="{{['hello', 'world']}}"
+  >
+    <p>
+      Slot content: 
+      {{
+        map(props.myProp, (value) => {
+          return `<p>${value}</p>`
+        })
+      }}
+    </p>
+  </include>
 </include>
