--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -1,3 +1,14 @@
-<include src="partials/layout.html" title="Simple example">
-  <p>index page</p>
+---
+title: GitHub Users
+usernames:
+  - anuraghazra
+  - saurabhdaware
+---
+
+<include src="partials/layout.html">
+  <p>{{title}}</p>
+
+  {{map(usernames, (username) => `
+    <include src="partials/github-user.html" username="${username}" />
+  `)}}
 </include>
