fix: build script

--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -5,7 +5,7 @@ usernames:
   - saurabhdaware
 ---
 
-<include src="partials/layout.html">
+<include src="partials/layout.html" title="{{title}}">
   <p>{{title}}</p>
 
   {{map(usernames, (username) => `
