--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -1,14 +1,8 @@
 ---
-title: GitHub Users
-usernames:
-  - anuraghazra
-  - saurabhdaware
+const count = 10;
+return {count}
 ---
 
-<include src="partials/layout.html" title="{{title}}">
-  <p>{{title}}</p>
-
-  {{map(usernames, (username) => `
-    <include src="partials/github-user.html" username="${username}" />
-  `)}}
+<include src="partials/layout.html">
+  <p>{{count}}</p>
 </include>
